--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </tr>
     </tbody>
   </table>
-  <a target="_blank" href=""><b>計算BMI:</b></a>
+  <a href="/bmi.html"><b>計算BMI:</b></a>
   <p>一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。</p><br>
   <p>
     計算所需熱量:
@@ -143,7 +143,19 @@
   <video src="/videos/file_example_MP4_1280_10MG.mp4" controls width="100%">
     影片載入失敗
   </video>
-
+  <hr>
+  <h2>表單填寫</h2>
+  <form action="">
+    <h4>需要更多資訊?免費索取健身資訊</h4>
+    <p>前100名還贈送［我愛健身］書籍一本!</p>
+    <label for="userEmail">Email</label>
+    <input type="email" id="userEmail" name="userEmail" placeholder="請輸入Email" required><br><br>
+    <label for="userOpinion">您的寶貴意見</label><br>
+    <textarea id="userOpinion" name="userOpinion" cols="30" rows="10"></textarea>
+    <p>
+      <button>確定</button>
+    </p>
+  </form>
 </body>
 
 </html>
